# learning-vulkan-rust

./: Cargo.toml  README.md
shaders/: shader.frag  shader.vert  shader_textured.frag  shader_textured.vert
src/: main.rs
src/engine/: allocator.rs  buffer.rs  camera.rs  debug.rs  light.rs  mod.rs  model.rs  pipeline.rs  pools.rs  queue_families.rs  surface.rs  swapchain.rs  texture.rs
src/shaders/: deferred.frag  deferred.vert  lighting.frag  lighting.vert
