[package]
name = "vulkan-tutorial"
version = "1.0.0"
edition = "2021"
authors = ["Lyrapuff <lyrapuff@gmail.com>"]

[dependencies]
ash = { version = "0.36.0", default-features = false, features = ["linked", "debug"] }
vk-shader-macros = "0.2.7"
gpu-allocator = "0.17.0"
winit = "0.26.1"
ash-window = "0.9.1"
nalgebra = "0.30.1"